--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <p>This calculator supports <code>+-*/^()</code>,
     whitespaces, and integers and floating numbers.</p>
     <input id="formula" value="1 + 2.0 * 3.1 / (4 ^ 5.6)"></input>
+    <input id="photos" type="file" multiple ></input>
     <div id="result"></div>
+    <img id="uploadImage" src="">
+    <button id="calculate">Calculate<button>
   </body>
   <script>
     require('./renderer.js')
